<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Alumno">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="318dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <TextView
        android:id="@+id/lbcedula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="333dp"
        android:layout_marginBottom="28dp"
        android:text="@string/c_dula"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lbnombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cedula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="656dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/cedula"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbcedula"
        tools:ignore="Autofill,HardcodedText,LabelFor"/>

    <TextView
        android:id="@+id/lbnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="333dp"
        android:text="@string/nombre"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="588dp"
        android:ems="10"
        android:inputType="text"
        android:text="nombre"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbcedula"
        app:layout_constraintTop_toBottomOf="@+id/cedula"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill,HardcodedText,LabelFor" />

    <TextView
        android:id="@+id/lbapellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="340dp"
        android:layout_marginBottom="537dp"
        android:text="@string/apellido"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbnombre"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill,HardcodedText,LabelFor"/>

    <EditText
        android:id="@+id/apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="513dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/a_pellido"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbapellido"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        tools:ignore="Autofill,HardcodedText,LabelFor" />

    <TextView
        android:id="@+id/lbtelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="345dp"
        android:layout_marginBottom="449dp"
        android:text="@string/tel_fono"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbapellido"
        app:layout_constraintVertical_bias="0.076" />

    <EditText
        android:id="@+id/telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="425dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/telefono"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbtelefono"
        app:layout_constraintTop_toBottomOf="@+id/apellido"
        tools:ignore="Autofill,HardcodedText,LabelFor" />

    <TextView
        android:id="@+id/lbdireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="301dp"
        android:layout_marginBottom="16dp"
        android:text="@string/direcci_n"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbtelefono" />

    <EditText
        android:id="@+id/direccion"
        android:layout_width="380dp"
        android:layout_height="117dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="227dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/direccion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbdireccion"
        tools:ignore="Autofill,HardcodedText,LabelFor" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="259dp"
        android:layout_marginBottom="107dp"
        android:text="@string/ok"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direccion"
        app:layout_constraintVertical_bias="0.622" />

    <Button
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="103dp"
        android:text="@string/salir"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/direccion" />

</androidx.constraintlayout.widget.ConstraintLayout>